--- a/resouce/settings/idea/templates/qbt.xml
+++ b/resouce/settings/idea/templates/qbt.xml
@@ -1,5 +1,5 @@
 <templateSet group="qbt">
-  <template name="asdf" value="asdfqwer" toReformat="false" toShortenFQNames="true">
+  <template name="asdf" value="asdfqwer" description="" toReformat="false" toShortenFQNames="true">
     <context>
       <option name="JAVA_CODE" value="true" />
     </context>
