--- a/template/pom.xml
+++ b/template/pom.xml
@@ -75,6 +75,14 @@
             <version>2.1.1</version>
         </dependency>
 
+        <!--数据库迁移flyway-->
+        <!-- https://mvnrepository.com/artifact/org.flywaydb/flyway-core -->
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+            <version>6.3.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
